--- a/main.html
+++ b/main.html
@@ -8,7 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div>
+		<a href ="https://youtu.be/l0yU-mcCM9I"My current favourite song is </a>
+	</div>
+
+		<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
